--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -31,24 +30,26 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Tiago Deane</h1>
+									<p>Motta e Silva (or title?)</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/me.jpg" alt="" />
 								</a>
+								<div id="visitor-count">Number of visitors: add later with backend...</div>
 							</article>
 
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Curriculum Vitæ</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Make a timeline-style curriculum here, starting from most recent (Master's degree).
+									Show skills first? Like experience with programming languages and such?
+
+									Also, show citizenships and language fluency at the start
 								</p>
 								<section>
 									<div class="row">
@@ -97,27 +98,27 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
+								<footer>
+									<ul class="items">
+										<li>
+											<h3>Email</h3>
+											<a href="mailto:tiagortg@gmail.com">tiagortg@gmail.com</a>
+										</li>
+										<li>
+											<h3>Social</h3>
+											<ul class="icons">
+												<li><a href="https://www.linkedin.com/in/tiago-deane-8053a5338/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/TiDeane" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li>
+													<a href="https://www.credly.com/users/tiago-deane-motta-e-silva" class="icon custom-icon">
+														<img src="images/newCredly2.png" alt="Credly" class="icon-img" />
+														<span class="label">Credly</span>
+													</a>
+												</li>
+											</ul>
+										</li>
+									</ul>
+								</footer>
 							</article>
 
 					</div>
@@ -125,7 +126,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2025 Tiago Deane</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
