fix: README links now work; TODO updated; more CV ideas added

--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
 									<h2>Curriculum Vitæ</h2>
 								</header>
 								<p>
-									Make a timeline-style curriculum here, starting from most recent (Master's degree).
-									Show skills first? Like experience with programming languages and such?
-
-									Also, show citizenships and language fluency at the start
+									- Make a timeline-style curriculum here, starting from most recent (Master's degree).<br>
+									- Show skills first? Like experience with programming languages and such? Maybe mention the skills along with the degrees I acquired them from.<br>
+									- Can also list relevant university courses when the degrees are mentioned.
+									Corresponding projects can be linked as the courses are mentioned, or there could be a separate section for projects<br>
+									- Maybe list AWS certificates (with Credly links) at the start, too?<br>
+									<br>
+									Also, mention citizenships and language fluency at the start
 								</p>
 								<section>
 									<div class="row">
