feat: implement aside section of CV

--- a/index.html
+++ b/index.html
@@ -50,47 +50,51 @@
 
 								<!-- Left Sidebar Section -->
 									<div class="cv-left">
-										<div class="contact-info">
-											<h3 class = "title">Certifications</h3>
+										<div class="aside-section">
+											<h3 class = "title aside">Certifications</h3>
 											<ul>
-												<li>AWS Certified Cloud Practitioner</li>
-												<li>AWS Solutions Architect (Associate)</li>
+												<li><span class="text">AWS Certified Cloud Practitioner</span></li>
+												<li><span class="text">AWS Solutions Architect (Associate)</span></li>
+												<li><a href="https://www.credly.com/users/tiago-deane-motta-e-silva">Credly</a></li>
+											</ul>
+											<h3 class = "title aside">Skills</h3>
+											<ul>
+												<li><span class="text">Backend: abc</span></li>
+												<li><span class="text">Frontend: xyz</span></li>
+												<li><span class="text">AWS: S3, EC2, etc</span></li>
+											</ul>
+											<h3 class = "title aside">Languages</h3>
+											<ul>
+												<li><span class="text">English - Fluent (C2)</span></li>
+												<li><span class="text">Portuguese - Native</span></li>
+											</ul>
+											<h3 class = "title aside">Citizenship</h3>
+											<ul>
+												<li><span class="text">Portuguese</span></li>
+												<li><span class="text">British</span></li>
+												<li><span class="text">Brazilian</span></li>
 											</ul>
 										</div>
-
-										<h3>Skills</h3>
-										<p>
-											Backend: abc<br>
-											Frontend: xyz<br>
-											AWS: S3, EC2, etc
-										</p>
-
-										<h3>Languages</h3>
-										<p>
-											English - Fluent (C2)<br>
-											Portuguese - Native
-										</p>
-
-										<h3>Citizenship</h3>
-										<p>Portuguese, British, Brazilian</p>
 									</div>
 
 									<!-- Main Content Section -->
 									<div class="cv-right">
-										<h3 class = "title">Education</h3>
-										<ul>
-											<!-- TODO: for this list, list-style: none and use IST's icon -->
-											<li>
-												<h5>2024-2026 (expected)</h5>
-												<h4>Master's in Computer Science and Engineering</h4> 
-												<h4>Instituto Superior Técnico</h4>
-											</li>
-											<li>
-												<h5>2021-2024</h5>
-												<h4>Bachelor's in Computer Science and Engineering</h4>
-												<h4>Instituto Superior Técnico</h4>
-											</li>
-										</ul>
+										<div class="education-section">
+											<h3 class = "title">Education</h3>
+											<ul>
+												<!-- TODO: for this list, list-style: none and use IST's icon -->
+												<li>
+													<h5>2024-2026 (expected)</h5>
+													<h4>Master's in Computer Science and Engineering</h4> 
+													<h4>Instituto Superior Técnico</h4>
+												</li>
+												<li>
+													<h5>2021-2024</h5>
+													<h4>Bachelor's in Computer Science and Engineering</h4>
+													<h4>Instituto Superior Técnico</h4>
+												</li>
+											</ul>
+										</div>
 									</div>
 							</article>
 
