fix: restored accidentally deleted contact-info section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tiago Deane CV</title>
+		<title>CV | Tiago Deane</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,7 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Tiago Deane</h1> <!-- TODO: pôr linha em baixo disso pra separar visualmente o nome do profile -->
+									<h1>Tiago Deane</h1> <!-- TODO: talvez pôr linha em baixo disso pra separar visualmente o nome do profile? -->
 									<p>TODO: Profile here (team skills, "passion" wow!)</p> 
 								</header>
 								<a href="#CV" class="jumplink pic">
@@ -82,7 +82,7 @@
 										<div class="education-section">
 											<h3 class = "title">Education</h3>
 											<ul>
-												<!-- TODO: for this list, list-style: none and use IST's icon -->
+												<!-- TODO: for this list, maybe "list-style: none" and use IST's icon? -->
 												<li>
 													<h5>2024-2026 (expected)</h5>
 													<h4>Master's in Computer Science and Engineering</h4> 
